# jet

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  justfile  vendor.cmake
core/: CMakeLists.txt
core/include/: jet.h
core/source/: jet.cpp  window.cpp
engine/: CMakeLists.txt
engine/include/jet/: assert.h  consts.h  engine.h  memory.h  pool.h  window.h
engine/source/: assert.c  engine.c  memory.c  pool.c  vendor_implementations.c  window.c
examples/: CMakeLists.txt
examples/test/: test.cpp
game/: CMakeLists.txt
game/source/: main.c
tests/: CMakeLists.txt
